--- a/arcade.html
+++ b/arcade.html
@@ -1,2 +1,20 @@
-<h1>Elenco videogiochi</h1>
-<h2>collaboratively icentivize accurate web-readiness</h2>
+<html>
+
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <p>
+    <h1>feature/s01-arcade</h1>
+    <h2>collaboratively incentivize accurate web-readiness</h2>
+    </p>
+
+    <p>
+        <a href="">
+            <h3>Back</h3>
+        </a>
+    </p>
+</body>
+
+</html>
