Cambiato il titolo

--- a/arcade.html
+++ b/arcade.html
@@ -6,7 +6,7 @@
 
 <body>
     <p>
-    <h1>feature/s01-arcade</h1>
+    <h1>Elenco videogiochi</h1>
     <h2>collaboratively incentivize accurate web-readiness</h2>
     </p>
 
