--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Main menu</h1>
     <hr />
     <ol>
-        <li><a href="dettaglio".html">voce del menu di esempio</a></li>
+        <li><a href="dettaglio.html">voce del menu di esempio</a></li>
     </ol>
 
 </body>
