aggiunto paragrafo di testo a work.html

--- a/work.html
+++ b/work.html
@@ -9,6 +9,12 @@
     <h1>Elenco applicazioni di produttivià</h1>
     <h2>Phosfluorescently embrace client-centric outsourcing</h2>
     </p>
+    <p>
+        Constraints agree to disagree on the challenges, notwithstanding that opportunities provide an indication of
+        empowerment.
+        A take-home lesson is that a standard paper trail leads to win-win deliverables.
+        We are convinced that strategies take the issue off-line.
+    </p>
 
     <p>
         <a href="index.html">
