--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Main menu</h1>
     <hr />
     <ol>
-        <li><a href=arcade.html>Arcade</a></li>
+        <li><a href=arcade.html>Elenco applicazioni arcade</a></li>
         <li><a href="develop.html">Elenco applicazioni per sviluppare</a></li>
         <li><a href="work.html">Elenco applicazioni di produttività</a></li>
     </ol>
