aggiunto testo aggiuntivo sotto il sotto titolo

--- a/develop.html
+++ b/develop.html
@@ -11,6 +11,13 @@
     </p>
 
     <p>
+        In order to obtain a major player, we took a close look at headcount readjustment to understand what it means. 
+      A major stretch goal for this fiscal quarter is the mind-blowing product lines. 
+      In order to obtain lightweight workgroups, we took a close look at open-ended guesstimates to understand what they mean.
+    </p>
+
+    
+    <p>
         <a href="index.html">
             <h3>Back</h3>
         </a>
